# Traducteur-Algo

./: .gitignore  .gitmodules  CMakeLists.txt  Function.h  Traducteur-Algo.pro  macosx.pri  main.cpp  test_convertion.cpp  test_equalstype.cpp  tralgo_v3.pro  win32.pri
InterpreteurAlgo/Algo/: Algo.pri  Algo.pro  CAgloException.cpp  CAgloException.h  ChoixSurBuilder.cpp  ChoixSurBuilder.h  ConditionBuilder.cpp  FunctionInstructionBuilder.cpp  GestionaireMacroCode.cpp  GestionnaireInstruction.cpp  GestionnaireInstruction.h  LecteurCode.h  LoopBuilder.cpp  LoopBuilder.h  conditionbuilder.h  functioninstructionbuilder.h  gestionairemacrocode.h
InterpreteurAlgo/Algo/LecteurCode/: AnalyseCode.cpp  AnalyseMath.cpp  FonctionDelimiteur.cpp
InterpreteurAlgo/BaseInterpreteur/: BaseInterpreteur.pro
InterpreteurAlgo/BaseInterpreteur/ConditionalInstruction/: BaseLoop.cpp  BaseLoop.h  BreakLoop.cpp  BreakLoop.h  ConditionIf.cpp  ConditionIf.h  ConditionalInstruction.pri  ConditionalInstruction.pro  Declaration.cpp  Declaration.h  DoWhileLoop.cpp  DoWhileLoop.h  ExpressionToInstruction.cpp  ExpressionToInstruction.h  Loop.cpp  Loop.h  LoopFor.cpp  LoopFor.h  RetourDeFonction.cpp  RetourDeFonction.h  WhileLoop.cpp  WhileLoop.h  continue.cpp  continue.h
InterpreteurAlgo/BaseInterpreteur/ElementAlgorithmique/: CoreExpression.cpp  CoreExpression.h  ElementAlgorithmique.pri  ElementAlgorithmique.pro  Expression.cpp  Expression.h  Fonction.cpp  Fonction.h  Instruction.cpp  Instruction.h  InstructionBlock.cpp  (+10 more)
Traducteur/: Traducteur.pro  algo.h  editor.cpp  editor.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputedit.cpp  outputedit.h  setup.ui
exception/: BadCastParameters.cpp  BadCastParameters.h  BadModificator.cpp  BadModificator.h  InvalidExpression.cpp  InvalidExpression.h  ParametersCount.cpp  ParametersCount.h  TraductorException.cpp  TraductorException.h
expression/: ArgumentExpression.cpp  ArgumentExpression.h  Expression.cpp  Expression.h  ValueExpression.h  ValueExpression.tpp  VariableExpression.h  expression.pri
instruction/: BreakLoop.cpp  BreakLoop.h  Conditional.cpp  Conditional.h  ForLoop.cpp  ForLoop.h  InstructionBlock.cpp  InstructionBlock.h  Loop.cpp  Loop.h  NextLoop.cpp  NextLoop.h  instruction.pri
interface/: AbstractDataTypeVisitor.h  AbstractOperation.h  AbstractOperator.h  AbstractOperatorVisitor.h  Expressionable.h  IAbstractDataTypeVisitable.h  IAbstractDataTypeVisitor.h  IArgumentVisitable.h  IArgumentVisitor.h  IArguments.cpp  IArguments.h  ICommonAbstractData.h  ICommonAbstractDataVisitable.h  ICommonAbstractDataVisitor.h  ICommonType.h  ICommonTypeVisitable.h  ICommonTypeVisitor.h  IExpression.h  IExpressionVisitor.h  IFunction.h  IFunctionVisitable.h  IFunctionVisitor.h  IInstruction.h  IInstructionVisitable.h  IInstructionVisitor.h  IOperation.h  IOperationVisitable.h  IOperationVisitor.h  IOperator.h  IOperatorVisitable.h  IOperatorVisitor.h  IParameters.cpp  IParameters.h  IParametersVisitable.h  IParametersVisitor.h  ITypeVisitable.h  ITypeVisitor.h  Loopable.cpp  interface.pri
operation/: And.cpp  And.h  BitWiseOperation.cpp  BitWiseOperation.h  Division.cpp  Division.h  LogicOperation.cpp  LogicOperation.h  Multiplication.cpp  Multiplication.h  Not.cpp  Not.h  NumericOperation.cpp  NumericOperation.h  Or.cpp  Or.h  Substract.cpp  Substract.h  Sum.cpp  Sum.h  operation.pri
operator/: SizeOfArray.cpp  SizeOfArray.h  operator.pri
struct_algo/: CMakeLists.txt
struct_algo/exception/: BadCastParameters.cpp  BadCastParameters.h  BadModificator.cpp  InvalidExpression.cpp  InvalidExpression.h  ParametersCount.cpp  ParametersCount.h  TraductorException.cpp
struct_algo/expression/: ExpressionNaire.cpp  ExpressionNaire.h  ValueExpression.h  ValueExpression.tpp
struct_algo/instruction/: BreakLoop.cpp  Conditional.cpp  Conditional.h  ForLoop.cpp  ForLoop.h  InstructionBlock.cpp  InstructionBlock.h  Loop.cpp  Loop.h  NextLoop.cpp
struct_algo/interface/: AbstractOperation.h  AbstractOperationMember.h  AbstractOperationVisitor.h  Expression.h  Expressionable.h  IExpressionVisitable.h  IFunction.h  IInstructionVisitor.h  Instructable.h  Instruction.h  LoopInstruction.cpp  LoopInstruction.h  Loopable.cpp  Loopable.h
struct_algo/operation/: And.h  Assign.cpp  Assign.h  BitWiseOperation.cpp  BitWiseOperation.h  Division.cpp  LogicOperation.cpp  LogicOperation.h  Multiplication.cpp  Multiplication.h  NumericOperation.cpp  NumericOperation.h  Substract.cpp
struct_algo/type/: AbstractDataType.h  AbstractDataTypeReference.cpp  AbstractDataTypeReference.h  AbstractDataTypeReference.iuml  Character.cpp  Character.h  ClassDataType.cpp  ClassDataType.h  ConstAbstractDataType.cpp  ConstAbstractDataType.h  DecimalDataType.cpp  NumericDataType.cpp  NumericDataType.h  NumericDataType.iuml  ParametersUtility.cpp  ParametersUtility.h  ScalarDataType.cpp  ScalarDataType.h
struct_algo/variable/: Variable.cpp  Variable.h
tokenizer/: CMakeLists.txt  ModuleTraduction.cpp  TraducteurAlgo.cpp  TraducteurAlgo.h  regex.cpp  test_tokenizer_text.cpp
tokenizer/cmake/: FindPCRE2.cmake
traducteur_algo/: CMakeLists.txt  ModuleTraduction.h  TokenizerIterator.cpp  TokenizerIterator.h  TraducteurAlgo.cpp  TraducteurAlgo.h  regex.h
type/: AbstractDataType.cpp  AbstractDataType.h  AbstractDataType.iuml  AbstractDataTypeReference.cpp  AbstractDataTypeReference.iuml  ArgumentType.cpp  ArgumentType.h  Boolean.cpp  Boolean.h  Character.cpp  Character.h  Character.iuml  CommonAbstractData.cpp  CommonAbstractData.h  CommonGeneric.cpp  CommonGeneric.h  CommonNumeric.cpp  CommonNumeric.h  CommonNumeric_p.h  CommonNumeric_p.inl  CommonScalar.cpp  CommonScalar.h  CommonScalar_p.h  CommonScalar_p.inl  CommonType.cpp  CommonType.h  ConstAbstractDataType.cpp  ConstAbstractDataType.iuml  DecimalDataType.cpp  DecimalDataType.h  DecimalDataType.iuml  Numeric.cpp  Numeric.h  NumericDataType.cpp  NumericDataType.h  NumericDataType.iuml  Numeric_p.h  Numeric_p.inl  ParametersUtility.cpp  ParametersUtility.h  (+9 more)
variable/: Variable.cpp  Variable.h
(+50 files in other folders)
